# netscope

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
netscope/: anomalies.py  api.py  charts.py  cli.py  flows.py  models.py  parser.py  stats.py  storage.py
tests/: create_sample_pcap.py  sample.pcap  test_anomalies.py  test_api.py  test_charts.py  test_cli.py  test_flows.py  test_parser.py  test_stats.py  test_storage.py
