[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netscope"
version = "0.1.0"
description = "Network traffic analyzer for PCAP files"
requires-python = ">=3.10"
dependencies = [
    "scapy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["netscope*"]
